Try Github Actions

--- a/_template/paper.tex
+++ b/_template/paper.tex
@@ -20,7 +20,7 @@
             \vspace{2ex}
 
             \small{
-                \textbf{Abstract}---\input{abstract.tex}
+                \textbf{Abstract}---\input{./abstract.tex}
             }
             \par
             \vspace{4ex}
