--- a/index.tex
+++ b/index.tex
@@ -20,7 +20,7 @@
             \vspace{2ex}
 
             \small{
-                \textbf{Abstract}---\input{abstract.tex}
+                \textbf{Abstract}---\input{./abstract.tex}
             }
             \par
             \vspace{4ex}
@@ -35,5 +35,5 @@
     Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
     \bibliographystyle{splncs04}
-    \bibliography{paper}
+    \bibliography{index}
 \end{document}
