--- a/index.tex
+++ b/index.tex
@@ -1,39 +1,50 @@
 \documentclass[12pt,a4paper,twocolumn]{article}
+\usepackage{ccicons}
+\usepackage{hyperref}
 
 \begin{document}
-    \twocolumn[{
-        \begin{centering}
-            \huge{Title}
-            \par
-            \vspace{2ex}
+\twocolumn[{
+		\begin{centering}
+			\huge{Title}
+			\par
+			\vspace{2ex}
 
-            \large{
-                Manuel Alabor\\
-                Supervised by SUPERVISOR\\
-                University of Applied Sciences Rapperswil
-            }
-            \par
-            \vspace{2ex}
+			\large{
+				Manuel Alabor\\
+				Supervised by SUPERVISOR\\
+				University of Applied Sciences Rapperswil
+			}
+			\par
+			\vspace{2ex}
 
-            \large{\today}
-            \par
-            \vspace{2ex}
+			\large{\today}
+			\par
+			\vspace{2ex}
 
-            \small{
-                \textbf{Abstract}---\input{./abstract.tex}
-            }
-            \par
-            \vspace{4ex}
-        \end{centering}
-    }]
+			\small{
+				\textbf{Abstract}---\input{./abstract.tex}
+			}
+			\par
+			\vspace{2ex}
 
-    \section{Intro}
-    Some Content \cite{Author:Year:Abbr:1111111}
-    Test
+			\small{
+				\textbf{Keywords}: tbd.
+			}
+			\par
+			\vspace{4ex}
+		\end{centering}
+	}]
 
-    \section{Intro}
-    Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+	\section{Intro}
+	Some Content \cite{Author:Year:Abbr:1111111}
+	Test
 
-    \bibliographystyle{splncs04}
-    \bibliography{index}
+	\section{Intro}
+	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+
+	\bibliographystyle{splncs04}
+	\bibliography{index}
+
+	\section*{License}
+	\ccby\thinspace\thinspace This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}.
 \end{document}
