--- a/index.tex
+++ b/index.tex
@@ -25,13 +25,13 @@
 
 	\begin{quotation}
 		\small{
-			\textbf{Abstract}---\input{./abstract.tex}
+			\noindent\textbf{Abstract}---\input{./abstract.tex}
 		}
 		\par
 		\vspace{2ex}
 
 		\small{
-			\textbf{Keywords}: tbd.
+			\noindent\textbf{Keywords}: tbd.
 		}
 		\par
 		\vspace{4ex}
