--- a/paper.tex
+++ b/paper.tex
@@ -2,8 +2,6 @@
 \usepackage{ccicons}
 \usepackage{hyperref}
 
-\newcommand{\version}{v0.1}
-
 \begin{document}
 \begin{centering}
 	\Huge{The Title}
@@ -15,10 +13,10 @@
 		Supervised by The Supervisor\\
 		\par
 		\vspace{2ex}
-		HSR University of Applied Sciences Rapperswil\\
+		Eastern Switzerland University of Applied Sciences\\
 		\par
 		\vspace{2ex}
-		\today{} (\version)
+		\today{}
 	}
 	\par
 	\vspace{2ex}
